test/statements/elliot/loops/modifyIndicesStandalone.good
modifyIndicesStandalone.chpl:5: error: illegal lvalue in assignment
modifyIndicesStandalone.chpl:10: error: illegal lvalue in assignment
modifyIndicesStandalone.chpl:15: error: illegal lvalue in assignment
